# avatar_hypergraph_rewriting

./: Cargo.toml  README.md
examples/: wolfram_vs_avatar.rs
src/: lib.rs
