[package]
name = "avatar_hypergraph_rewriting"
version = "0.1.0"
edition = "2021"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
keywords = ["hypergraph", "avatar", "wolfram", "rewriting", "advancedresearch"]
description = "Hypergraph rewriting system with avatars for symbolic distinction"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/advancedresearch/avatar_hypergraph_rewriting.git"
homepage = "https://github.com/advancedresearch/avatar_hypergraph_rewriting"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
